--- a/Tailwind2/public/index.html
+++ b/Tailwind2/public/index.html
@@ -517,7 +517,7 @@
                         <p class="bg-headerBtnText h-[1px]  w-full"></p>
                     </span>
 
-                    <span class="Alinks flex justify-center gap-3 px-2 text-headerBtnText">
+                    <span class="Alinks flex justify-center gap-3 text-headerBtnText">
                         <a href="#" class="alinks relative ">
                             <span class="texttt">
                                 Book Now
@@ -562,7 +562,7 @@
                         <p class="bg-headerBtnText h-[1px]  w-full"></p>
                     </span>
 
-                    <span class="Alinks flex justify-center gap-3 px-2 text-headerBtnText">
+                    <span class="Alinks flex justify-center gap-3 text-headerBtnText">
                         <a href="#" class="alinks relative ">
                             <span class="texttt">
                                 Book Now
@@ -606,7 +606,7 @@
                         Eko Suites</p>
                         <p class="bg-headerBtnText h-[1px]  w-full"></p>
                     </span>
-                    <span class="Alinks flex justify-center gap-3 px-2 text-headerBtnText">
+                    <span class="Alinks flex justify-center gap-3  text-headerBtnText">
                         <a href="#" class="alinks relative ">
                             <span class="texttt">
                                 Book Now
@@ -652,7 +652,7 @@
                             Eko Signature</p>
                         <p class="bg-headerBtnText h-[1px]  w-full"></p>
                     </span>
-                    <span class="Alinks flex justify-center gap-3 px-2 text-headerBtnText">
+                    <span class="Alinks flex justify-center gap-3  text-headerBtnText">
                         <a href="#" class="alinks relative ">
                             <span class="texttt">
                                 Book Now
