--- a/Tailwind2/public/index.html
+++ b/Tailwind2/public/index.html
@@ -706,7 +706,7 @@
     </div>
 
 
-    <div class="banner6 bg-banner6 w-full px-10 pt-8 pb-14">
+    <div class="banner6 bg-banner6 w-full px-5 md:px-10 pt-8 pb-14">
         <div class="parent">
             <div class="pchild flex flex-col justify-center items-center gap-6 ">
 
@@ -729,15 +729,15 @@
 
 
 
-        <div class="px-5 py-3">
-            <div class="container pt-0 pb-8  ">
+        <div class="px-0 md:px-5 py-3">
+            <div class="container pt-0 pb-8  w-full ">
                 <div class="slider_wrapper overflow-hidden relative w-full flex justify-center items-center">
-                    <div class="slides w-full flex gap-2  transition-transform duration-500 ease-out">
+                    <div class="slides w-full flex gap-0 md:gap-2   transition-transform duration-500 ease-in-out">
                         <!-- Two slides per view -->
                         <div class="slide  ">
                             <div class="  things ">
 
-                                <div class="flex justify-center  tripleH   items-center  relative ">
+                                <div class="flex justify-center   tripleH   items-center  relative ">
                                     <div class="thisch bg-[url('./images/gym.jpg')] bg-center bg-cover">
 
                                     </div>
@@ -787,7 +787,7 @@
 
 
                         <div class="slide  ">
-                            <div class=" things   ">
+                            <div class=" things  bg  ">
 
                                 <div class="flex justify-center tripleH  relative items-center   ">
                                     <div class="w-full thisch bg-[url('./images/tennis-court.jpg')] bg-center bg-cover">
@@ -812,7 +812,7 @@
 
 
                         <div class="slide  ">
-                            <div class=" things   ">
+                            <div class=" things    ">
 
                                 <div class="flex justify-center tripleH  relative items-center   ">
                                     <div class="w-full thisch bg-[url('./images/spa.jpg')] bg-center bg-cover">
@@ -842,8 +842,7 @@
                             <div class=" things   ">
 
                                 <div class="flex justify-center tripleH  relative items-center   ">
-                                    <div
-                                        class="w-full thisch bg-[url('./images/saloon.jpg')] bg-center bg-cover">
+                                    <div class="w-full thisch bg-[url('./images/saloon.jpg')] bg-center bg-cover">
 
                                     </div>
 
@@ -868,11 +867,11 @@
 
                 <!-- Dots for navigation -->
                 <div class="dots flex justify-center mt-4 space-x-2">
-                   <div class=" pt-2">
-                    <button class="dot w-[10px] h-[10px] bg-gray-300 rounded-full" data-slide="0"></button>
-                    <button class="dot w-[10px] h-[10px] bg-gray-300 rounded-full" data-slide="1"></button>
-                    <button class="dot w-[10px] h-[10px] bg-gray-300 rounded-full" data-slide="2"></button>
-                   </div>
+                    <div class=" dotParent pt-2 flex justify-center gap-2">
+                        <button class="dot w-[10px] h-[10px] bg-gray-300 rounded-full" data-slide="0"></button>
+                        <button class="dot w-[10px] h-[10px] bg-gray-300 rounded-full" data-slide="1"></button>
+                        <button class="dot w-[10px] h-[10px] bg-gray-300 rounded-full" data-slide="2"></button>
+                    </div>
                 </div>
             </div>
 
