--- a/Tailwind2/public/tst.html
+++ b/Tailwind2/public/tst.html
@@ -1,184 +1,53 @@
+// const dots = document.querySelectorAll(".dot");
+// const slides = document.querySelector(".slides");
+// const dotParent = document.querySelector(".dotParent");
+
+// // Function to update the active dot based on index
+// function updateActiveDot(index) {
+// dots.forEach((dot) => (dot.style.backgroundColor = "white"));
+// dots[index].style.backgroundColor = "rgb(134,151,145)";
+// }
+
+// // Set the first dot as active when the page loads
+// updateActiveDot(0);
 
 
 
+// function handleResize() {
+// if (window.innerWidth <= 768) { // console.log("Small screen: 1 slide per view"); // // Add two more dots if not
+    already added (for 5 dots) // if (dotParent.children.length < 5) { // for (let i=3; i <=4; i++) { // const
+    newDot=document.createElement("button"); // newDot.classList.add("dot", "w-[10px]" , "h-[10px]" , "bg-gray-300"
+    , "rounded-full" ); // newDot.dataset.slide=i; // Set the index // dotParent.appendChild(newDot); // } // } // const
+    smallDots=document.querySelectorAll(".dot"); // smallDots.forEach((dot, index)=> {
+    // dot.addEventListener("click", () => {
+    // let offset = -index * 100; // Move 100% for each slide
+    // slides.style.transform = `translateX(${offset}%)`;
+    // updateActiveDot(index);
+    // });
+    // });
+    // } else {
+    // console.log("Large screen: 2 slides per view");
 
-<div class="frame ">
-    <div class="fchild relative bg-[url('./images/box4.jpg')] bg-center bg-cover">
-        <div class="w-full h-full relative transition-all ease-in-out duration-700 Eko bg-trans hover:bg-transxl">
+    // // Remove extra dots if present (ensure 3 dots only)
+    // while (dotParent.children.length > 3) {
+    // dotParent.removeChild(dotParent.lastChild);
+    // }
 
-            <p class="ekoo">
-                At Eko Gardens, the rooms are well appointed and designed to provide comfort and
-                convenience.
-            </p>
+    // dots.forEach((dot, index) => {
+    // dot.addEventListener("click", () => {
+    // let offset;
+    // if (index === 2) {
+    // offset = -151; // Move to the last two slides
+    // } else {
+    // offset = -index * 100; // Move by 100% for two slides per view
+    // }
+    // slides.style.transform = `translateX(${offset}%)`;
+    // updateActiveDot(index);
+    // });
+    // });
+    // }
+    // }
 
-            <span class="absolute px-2 eko  bottom-4 w-full">
-                <p class="text-white boxtext">
-                    Eko Gardens</p>
-                <p class="bg-headerBtnText h-[1px]  w-full"></p>
-            </span>
-
-            <span class="Alinks flex justify-center gap-3 text-headerBtnText">
-                <a href="#" class="alinks relative ">
-                    <span class="texttt">
-                        Book Now
-                    </span>
-                    <span class="house ">
-                        <span class="clr">
-                            <i class="fa-solid fa-chevron-right"></i>
-                        </span>
-                        <span class="clrr">
-                            <i class="fa-solid fa-chevron-right"></i>
-                        </span>
-                    </span>
-                </a>
-                <a href="#" class="alinks relative">
-                    <span class="texttt">View More</span>
-                    <span class="house ">
-                        <span class="clr">
-                            <i class="fa-solid fa-chevron-right"></i>
-                        </span>
-                        <span class="clrr">
-                            <i class="fa-solid fa-chevron-right"></i>
-                        </span>
-                    </span>
-                </a>
-            </span>
-
-        </div>
-    </div>
-</div>
-<div class="frame ">
-    <div class="fchild relative bg-[url('./images/box4.jpg')] bg-center bg-cover">
-        <div class="w-full h-full relative transition-all ease-in-out duration-700 Eko bg-trans hover:bg-transxl">
-
-            <p class="ekoo">
-                Eko Hotel rooms and suites are decorated and designed for your comfort and relaxation.
-            </p>
-
-            <span class="absolute px-2 eko  bottom-4 w-full">
-                <p class="text-white ">
-                    Eko Hotel</p>
-                <p class="bg-headerBtnText h-[1px]  w-full"></p>
-            </span>
-
-            <span class="Alinks flex justify-center gap-3 text-headerBtnText">
-                <a href="#" class="alinks relative ">
-                    <span class="texttt">
-                        Book Now
-                    </span>
-                    <span class="house ">
-                        <span class="clr">
-                            <i class="fa-solid fa-chevron-right"></i>
-                        </span>
-                        <span class="clrr">
-                            <i class="fa-solid fa-chevron-right"></i>
-                        </span>
-                    </span>
-                </a>
-                <a href="#" class="alinks relative">
-                    <span class="texttt">View More</span>
-                    <span class="house ">
-                        <span class="clr">
-                            <i class="fa-solid fa-chevron-right"></i>
-                        </span>
-                        <span class="clrr">
-                            <i class="fa-solid fa-chevron-right"></i>
-                        </span>
-                    </span>
-                </a>
-            </span>
-
-        </div>
-    </div>
-</div>
-<div class="frame ">
-    <div class="fchild relative bg-[url('./images/box4.jpg')] bg-center bg-cover">
-        <div class="w-full h-full relative transition-all ease-in-out duration-700 Eko bg-trans hover:bg-transxl">
-
-            <p class="ekoo">
-                Eko Suites is tucked in the most discreet part of the property with 88 large suites. The
-                property
-                offers a peaceful,
-                quiet and relaxing ambience.
-            </p>
-
-            <span class="absolute px-2 eko  bottom-4 w-full">
-                <p class="text-white ">
-                    Eko Suites</p>
-                <p class="bg-headerBtnText h-[1px]  w-full"></p>
-            </span>
-            <span class="Alinks flex justify-center gap-3  text-headerBtnText">
-                <a href="#" class="alinks relative ">
-                    <span class="texttt">
-                        Book Now
-                    </span>
-                    <span class="house ">
-                        <span class="clr">
-                            <i class="fa-solid fa-chevron-right"></i>
-                        </span>
-                        <span class="clrr">
-                            <i class="fa-solid fa-chevron-right"></i>
-                        </span>
-                    </span>
-                </a>
-                <a href="#" class="alinks relative">
-                    <span class="texttt">View More</span>
-                    <span class="house ">
-                        <span class="clr">
-                            <i class="fa-solid fa-chevron-right"></i>
-                        </span>
-                        <span class="clrr">
-                            <i class="fa-solid fa-chevron-right"></i>
-                        </span>
-                    </span>
-                </a>
-            </span>
-
-        </div>
-    </div>
-</div>
-<div class="frame ">
-    <div class="fchild relative bg-[url('./images/box4.jpg')] bg-center bg-cover">
-        <div class="w-full h-full relative transition-all ease-in-out duration-700 Eko bg-trans hover:bg-transxl">
-
-            <p class="ekoo">
-                Caring comes easily to those of us who are privileged to cater to you at Eko Signature. The
-                vibrant colours of the
-                furnishing indulges you
-            </p>
-
-            <span class="absolute px-2 eko  bottom-4 w-full">
-                <p class="text-white ">
-                    Eko Signature</p>
-                <p class="bg-headerBtnText h-[1px]  w-full"></p>
-            </span>
-            <span class="Alinks flex justify-center gap-3  text-headerBtnText">
-                <a href="#" class="alinks relative ">
-                    <span class="texttt">
-                        Book Now
-                    </span>
-                    <span class="house ">
-                        <span class="clr">
-                            <i class="fa-solid fa-chevron-right"></i>
-                        </span>
-                        <span class="clrr">
-                            <i class="fa-solid fa-chevron-right"></i>
-                        </span>
-                    </span>
-                </a>
-                <a href="#" class="alinks relative">
-                    <span class="texttt">View More</span>
-                    <span class="house ">
-                        <span class="clr">
-                            <i class="fa-solid fa-chevron-right"></i>
-                        </span>
-                        <span class="clrr">
-                            <i class="fa-solid fa-chevron-right"></i>
-                        </span>
-                    </span>
-                </a>
-            </span>
-
-        </div>
-    </div>
-</div>
+    // // Listen to window resize and execute the function initially
+    // window.addEventListener("resize", handleResize);
+    // handleResize(); // Run on load to ensure correct behavior
